--- a/src/app/kontaktdaten/kontaktdaten.component.html
+++ b/src/app/kontaktdaten/kontaktdaten.component.html
@@ -29,7 +29,7 @@
     <input type="tel" placeholder="Passwort">
     <p> Passwort wiederholen </p>
     <input type="tel" placeholder="Passwort wiederholen">
-    <input type="submit" id="submit" value="Änderungen speichern">
+    <button type="submit" id="submit" mat-raised-button color="primary">Änderungen speichern</button>
   </div>
   <div class="teil3"> </div>
 
