--- a/src/app/skipasskaufen/skipasskaufen.component.html
+++ b/src/app/skipasskaufen/skipasskaufen.component.html
@@ -30,7 +30,7 @@
   <p>Handynummer</p>
   <input type="tel" name="Handynummer" placeholder="Handynummer">
     <p> </p>
-  <button type="submit" id="kaufen" >Kostenpflichtig kaufen</button>
+  <button type="submit" id="kaufen" mat-raised-button color="primary" >Kostenpflichtig kaufen</button>
   </form>
 </div>
 <div class="teil3"> </div>
