--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -14,7 +14,7 @@
     <h1>Oberwallis Skipass</h1>
   </div>
   <div class="kaufen">
-      <button type="button" [routerLink]="['/skipasskaufen']"> Skipass kaufen </button>
+      <button mat-raised-button color="primary" type="button" [routerLink]="['/skipasskaufen']"> Skipass kaufen </button>
   </div>
 </section>
 
