--- a/src/app/kontaktformular/kontaktformular.component.html
+++ b/src/app/kontaktformular/kontaktformular.component.html
@@ -19,7 +19,7 @@
     <input type="text" placeholder="Hier können Sie Ihren Betreff eingeben">
     <p> Ihre Anfrage </p>
     <textarea id="anfrage" placeholder="Hier können Sie Ihre Nachricht lassen" rows="10"></textarea>
-    <input type="submit" id="submit" value="Absenden">
+    <button mat-raised-button color="primary" type="submit" id="submit">Absenden</button>
   </div>
   <div class="teil3"> </div>
 
