--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
 <footer>
   <div class="footer-container">
     <div class="left-col">
-      <img src="logo.png" alt="" class="logo">
+      <button [routerLink]="['/homepage']" class="logo"> Ticketero </button>
       <div class="social-media">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
