--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -113,3 +113,16 @@ footer{
     margin-top: 20px;
     }
 }
+
+.logo{
+  width: 180px;
+}
+
+footer .logo{
+  font-weight: bolder;
+  font-size: 40px;
+  color: black;
+  cursor: pointer;
+  border:none;
+  padding-bottom:40px;
+  }
