--- a/src/app/kontaktformular/kontaktformular.component.scss
+++ b/src/app/kontaktformular/kontaktformular.component.scss
@@ -26,7 +26,7 @@ background-size: cover;
 .persönliche_daten{
   display:flex;
 }
-
+textarea { resize: none; }
 .teil4{
   width:50%;
   text-align: center;
