--- a/src/app/accountverwaltung/accountverwaltung.component.html
+++ b/src/app/accountverwaltung/accountverwaltung.component.html
@@ -20,7 +20,7 @@
     <button mat-raised-button color="primary" [routerLink]="['/kontaktdaten']" >Kontaktdaten bearbeiten</button>
       <button mat-raised-button color="primary" [routerLink]="['/bevorstehendeEvents']">Mein Skipass</button>
       <button mat-raised-button color="primary"[routerLink]="['/kontaktformular']" > Verlust melden </button>
-      <button mat-raised-button color="primary" [routerLink]="['/kontaktformular']">Problem melden </button>
+      <button mat-raised-button color="primary" [routerLink]="['/problemmelden']">Problem melden </button>
       <button mat-raised-button color="primary" [routerLink]="['/homepage']"> Abmelden </button>
   </div>
 </section>
