--- a/src/app/kontaktdaten/kontaktdaten.component.html
+++ b/src/app/kontaktdaten/kontaktdaten.component.html
@@ -9,25 +9,25 @@
   <div class="teil1"> </div>
   <div class="teil2">
     <h1>Kontaktdaten bearbeiten</h1>
-    <p>Vorname </p>
+    <label>Vorname </label>
     <input type="text" placeholder="Max">
-    <p>Nachname </p>
+    <label>Nachname </label>
     <input type="text" placeholder="Mustermann">
-    <p>Geburtsdatum </p>
+    <label>Geburtsdatum </label>
     <input type="date" placeholder="Geburtsdatum">
-    <p>PLZ:</p>
+    <label>PLZ:</label>
     <input type="text" placeholder="74821">
-    <p> Ort </p>
+    <label> Ort </label>
     <input type="tel" placeholder="Muster Ort">
-    <p>Straße, Hausnummer </p>
+    <label>Straße, Hausnummer </label>
     <input type="text" placeholder="Musterstr.1">
-    <p>E-Mail Adresse </p>
+    <label>E-Mail Adresse </label>
     <input type="email" placeholder="max.mustermann@gmail.com">
-    <p>Handynummer </p>
+    <label>Handynummer </label>
     <input type="tel" placeholder="+49178445632">
-    <p> Passwort </p>
+    <label> Passwort </label>
     <input type="tel" placeholder="Passwort">
-    <p> Passwort wiederholen </p>
+    <label> Passwort wiederholen </label>
     <input type="tel" placeholder="Passwort wiederholen">
     <button type="submit" id="submit" mat-raised-button color="primary">Änderungen speichern</button>
   </div>
