--- a/src/app/kontaktformular/kontaktformular.component.html
+++ b/src/app/kontaktformular/kontaktformular.component.html
@@ -9,15 +9,15 @@
   <div class="teil1"> </div>
   <div class="teil2">
     <h1>Kontakt zu uns</h1>
-    <p>Name </p>
+    <label>Name </label>
     <input type="text">
-    <p> Aktuelle E-Mail Adresse </p>
+    <label> Aktuelle E-Mail Adresse </label>
     <input type="email" placeholder="E-Mail Adresse">
-    <p>Handynummer (für die Rückmeldungen) </p>
+    <label>Handynummer (für die Rückmeldungen) </label>
     <input type="tel" placeholder="Handynummer">
-    <p>Betreff</p>
+    <label>Betreff</label>
     <input type="text" placeholder="Hier können Sie Ihren Betreff eingeben">
-    <p> Ihre Anfrage </p>
+    <label> Ihre Anfrage </label>
     <textarea id="anfrage"  placeholder="Hier können Sie Ihre Nachricht lassen" rows="10"></textarea>
     <button mat-raised-button color="primary" type="submit" id="submit">Absenden</button>
   </div>
