--- a/src/app/kontaktformular/kontaktformular.component.scss
+++ b/src/app/kontaktformular/kontaktformular.component.scss
@@ -42,10 +42,21 @@ textarea { resize: none; }
   font-size: 55px;
   font-style:revert;
   font-weight:bold;
+  margin-top:40px;
 }
 
 .teil2 #submit {
 margin-top:60px;
 padding:10px;
 
+}
+.teil2 label{
+  padding-top:5%;
+}
+input, select,textarea{
+  padding: 10px;
+  border-radius: 10px;
+}
+button{
+  margin-top: 25px;
 }
