--- a/src/app/problemmelden/problemmelden.component.html
+++ b/src/app/problemmelden/problemmelden.component.html
@@ -17,7 +17,7 @@
     <input type="tel" placeholder="Handynummer">
     <p> Ihre Nachricht </p>
     <textarea id="anfrage" placeholder="Hier können Sie Ihre Nachricht lassen" rows="10"></textarea>
-    <input type="submit" id="submit" value="Absenden">
+    <button mat-raised-button color="primary" type="submit" id="submit">Absenden</button>
   </div>
   <div class="teil3"> </div>
 
