--- a/src/app/registrierungsmaske/registrierungsmaske.component.scss
+++ b/src/app/registrierungsmaske/registrierungsmaske.component.scss
@@ -14,11 +14,19 @@
   display: grid;
   justify-content: center;
   padding-top: 3%;
-  background:#fff;
+  background: #fff;
+  background-color:rgba(255,255,255,.8);
   width:50%;
   padding-bottom: 5%;
 }
-
+.teil2 h1 {
+font-size:55px;
+text-align:center;
+margin-top:40px;
+font-style:revert;
+font-weight:bold;
+padding-bottom: 40px;
+}
 html, body {
   height: auto;
 }
