--- a/src/app/anmeldemaske/anmeldemaske.component.scss
+++ b/src/app/anmeldemaske/anmeldemaske.component.scss
@@ -17,12 +17,21 @@
   background:#fff;
   width:50%;
   padding-bottom: 5%;
+  background: #fff;
+  background-color:rgba(255,255,255,.8);
 }
 
 html, body {
   height: auto;
 }
-
+.teil2 h1 {
+font-size:55px;
+text-align:center;
+margin-top:40px;
+font-style:revert;
+font-weight:bold;
+padding-bottom: 40px;
+}
 body{
   margin: 0;
   padding:0;
