--- a/src/app/kontaktdaten/kontaktdaten.component.scss
+++ b/src/app/kontaktdaten/kontaktdaten.component.scss
@@ -42,6 +42,7 @@ background-size: cover;
   font-size: 55px;
   font-style:revert;
   font-weight:bold;
+  margin-top:40px;
 }
 
 .teil2 #submit {
@@ -49,3 +50,14 @@ margin-top:60px;
 padding:10px;
 
 }
+.teil2 label{
+  padding-top:5%;
+}
+input, select{
+  padding: 10px;
+  border-radius: 10px;
+}
+button{
+  margin-top: 25px;
+}
+
