--- a/src/app/kontaktformular/kontaktformular.component.html
+++ b/src/app/kontaktformular/kontaktformular.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <head>
-  <title>Kontaktdaten bearbeiten</title>
+  <title>Kontaktformular</title>
 </head>
 <html>
 <body>
