css überall angepasst

--- a/src/app/kontaktdaten/kontaktdaten.component.scss
+++ b/src/app/kontaktdaten/kontaktdaten.component.scss
@@ -50,14 +50,10 @@ margin-top:60px;
 padding:10px;
 
 }
-.teil2 label{
-  padding-top:5%;
-}
-input, select{
-  padding: 10px;
-  border-radius: 10px;
-}
+
 button{
   margin-top: 25px;
 }
-
+#runter{
+  margin-top: 40px;
+}
