--- a/src/app/kontaktformular/kontaktformular.component.html
+++ b/src/app/kontaktformular/kontaktformular.component.html
@@ -8,17 +8,30 @@
 <section class="persönliche_daten">
   <div class="teil1"> </div>
   <div class="teil2">
-    <h1>Kontakt zu uns</h1>
-    <label>Name </label>
-    <input type="text">
-    <label> Aktuelle E-Mail Adresse </label>
-    <input type="email" placeholder="E-Mail Adresse">
-    <label>Handynummer (für die Rückmeldungen) </label>
-    <input type="tel" placeholder="Handynummer">
-    <label>Betreff</label>
-    <input type="text" placeholder="Hier können Sie Ihren Betreff eingeben">
-    <label> Ihre Anfrage </label>
-    <textarea id="anfrage"  placeholder="Hier können Sie Ihre Nachricht lassen" rows="10"></textarea>
+    <h1>Kontaktformular</h1>
+    <mat-form-field appearance="fill">
+    <mat-label>Name </mat-label>
+    <input matInput type="text">
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+    <mat-label> Aktuelle E-Mail Adresse </mat-label>
+    <input matInput type="email" placeholder="E-Mail Adresse">
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+    <mat-label>Handynummer (für die Rückmeldungen) </mat-label>
+    <input matInput type="tel" placeholder="Handynummer">
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+    <mat-label>Betreff</mat-label>
+    <input matInput type="text" placeholder="Hier können Sie Ihren Betreff eingeben">
+    </mat-form-field>
+
+    <mat-form-field class="input-field">
+      <textarea matInput name="questionText" cols="100" rows="5"
+                placeholder="Ihre Nachricht" [(ngModel)]="questionText"
+                required>
+      </textarea>
+    </mat-form-field>
     <button mat-raised-button color="primary" type="submit" id="submit">Absenden</button>
   </div>
   <div class="teil3"> </div>
