--- a/src/app/skipasskaufen/skipasskaufen.component.scss
+++ b/src/app/skipasskaufen/skipasskaufen.component.scss
@@ -41,17 +41,13 @@ body{
   font-size: 55px;
   font-style:revert;
   font-weight:bold;
+  margin-bottom: 40px;
 }
 form{
   display:grid;
 }
-.teil2 label{
-  padding-top:5%;
-}
-input, select{
-  padding: 10px;
-  border-radius: 10px;
-}
+
 button{
   margin-top: 25px;
 }
+
