--- a/src/app/kontaktdaten/kontaktdaten.component.html
+++ b/src/app/kontaktdaten/kontaktdaten.component.html
@@ -9,26 +9,60 @@
   <div class="teil1"> </div>
   <div class="teil2">
     <h1>Kontaktdaten bearbeiten</h1>
-    <label>Vorname </label>
-    <input type="text" placeholder="Max">
-    <label>Nachname </label>
-    <input type="text" placeholder="Mustermann">
-    <label>Geburtsdatum </label>
-    <input type="date" placeholder="Geburtsdatum">
-    <label>PLZ:</label>
-    <input type="text" placeholder="74821">
-    <label> Ort </label>
-    <input type="tel" placeholder="Muster Ort">
-    <label>Straße, Hausnummer </label>
-    <input type="text" placeholder="Musterstr.1">
-    <label>E-Mail Adresse </label>
-    <input type="email" placeholder="max.mustermann@gmail.com">
-    <label>Handynummer </label>
-    <input type="tel" placeholder="+49178445632">
-    <label> Passwort </label>
-    <input type="tel" placeholder="Passwort">
-    <label> Passwort wiederholen </label>
-    <input type="tel" placeholder="Passwort wiederholen">
+    <mat-form-field appearance="fill" id="runter">
+      <mat-label>Vorname </mat-label>
+      <input matInput type="text" placeholder="Max">
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Nachname </mat-label>
+      <input matInput type="text" placeholder="Mustermann">
+    </mat-form-field>
+
+    <mat-form-field color="primary" appearance="fill">
+      <mat-label>Geburtsdatum</mat-label>
+      <input matInput [matDatepicker]="picker2">
+      <mat-datepicker-toggle matSuffix [for]="picker2">
+      </mat-datepicker-toggle>
+      <mat-datepicker #picker2></mat-datepicker>
+    </mat-form-field>
+    <br>
+
+    <mat-form-field appearance="fill">
+    <mat-label>PLZ:</mat-label>
+    <input matInput type="text" placeholder="74821">
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+    <mat-label> Ort </mat-label>
+    <input matInput type="tel" placeholder="Muster Ort">
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+    <mat-label>Straße, Hausnummer </mat-label>
+    <input matInput type="text" placeholder="Musterstr.1">
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+    <mat-label>E-Mail Adresse </mat-label>
+    <input matInput type="email" placeholder="max.mustermann@gmail.com">
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+    <mat-label>Handynummer </mat-label>
+    <input matInput type="tel" placeholder="+49178445632">
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+    <mat-label> Passwort </mat-label>
+    <input matInput type="tel" placeholder="Passwort">
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+    <mat-label> Passwort wiederholen </mat-label>
+    <input matInput type="tel" placeholder="Passwort wiederholen">
+    </mat-form-field>
+
     <button type="submit" id="submit" mat-raised-button color="primary">Änderungen speichern</button>
   </div>
   <div class="teil3"> </div>
