--- a/src/app/kontaktformular/kontaktformular.component.scss
+++ b/src/app/kontaktformular/kontaktformular.component.scss
@@ -43,6 +43,7 @@ textarea { resize: none; }
   font-style:revert;
   font-weight:bold;
   margin-top:40px;
+  margin-bottom: 40px;
 }
 
 .teil2 #submit {
