--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -115,6 +115,12 @@ table p{
   .uberschrift h1{
     font-size: 40px;
   }
+  .vorteile li{
+    margin-top: 10px;
+  }
+  .kaufen button{
+    margin-bottom: 30px;
+  }
 }
 
 
