--- a/src/app/skipasskaufen/skipasskaufen.component.scss
+++ b/src/app/skipasskaufen/skipasskaufen.component.scss
@@ -50,4 +50,26 @@ form{
 button{
   margin-top: 25px;
 }
+@media(max-width:1000px){
+  .teil2 h1{
+    font-size: 40px;
+    text-align: center;
+  }
+}
+@media(max-width:850px){
+  .teil2 h1{
+    font-size: 30px;
+    text-align: center;
+    margin-top: 30px;
+  }
+  .teil1,.teil3{
+    width: 0%;
+  }
+  .teil2, .teil4{
+      width: 100%;
+    }
+    .teil4{
+    padding-top: 30px;
+    }
 
+}
