--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -42,13 +42,14 @@ a{
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap-reverse;
+  padding: 0%;
 }
 .vorteile ul li{
     background: grey;
     border: 3px solid black;
     padding: 0.5%;
     border-radius: 30px;
-    width: 140px;
+    width: 150px;
     text-align: center;
 }
 .uberschrift{
@@ -111,7 +112,7 @@ table tr{
 table p{
   font-size:14px;
 }
-@media(max-width:850px){
+@media(max-width:950px){
   .uberschrift h1{
     font-size: 40px;
   }
@@ -121,6 +122,28 @@ table p{
   .kaufen button{
     margin-bottom: 30px;
   }
+  .teil1, .teil3{
+    width:10%;
+  }
+ .teil2{
+    width:80%;
+  }
+  .gultigkeit .teil2 h2{
+    padding-top:40px;
+  }
+  .beteiligt .teil2 h2{
+    padding-top: 20px;
+  }
+  .tarife-uberschrift .teil2 h2{
+    padding-top: 20px;
+  }
+}
+@media (min-width:951px) and (max-width:1200px){
+  .teil1, .teil3{
+      width:15%;
+    }
+   .teil2{
+      width:70%;}
 }
 
 
