--- a/src/app/problemmelden/problemmelden.component.scss
+++ b/src/app/problemmelden/problemmelden.component.scss
@@ -62,3 +62,33 @@ button{
   margin-top: 25px;
 }
 textarea { resize: none; }
+@media(max-width:850px){
+  .teil2 h1{
+    font-size: 40px;
+    text-align: center;
+    margin-top: 30px;
+  }
+  .teil1,.teil3{
+    width: 0%;
+  }
+  .teil2, .teil4{
+      width: 100%;
+    }
+    .teil4{
+    padding-top: 30px;
+    }
+
+}
+@media (min-width:851px) and (max-width:1400px){
+  .teil1, .teil3{
+      width:15%;
+    }
+   .teil2, .teil4{
+      width:70%;}
+}
+@media(max-width:500px){
+  .example-container {
+    margin-left:5%;
+    margin-right:5%;
+  }
+}
