--- a/src/app/registrierungsmaske/registrierungsmaske.component.html
+++ b/src/app/registrierungsmaske/registrierungsmaske.component.html
@@ -28,10 +28,12 @@
       <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
   </mat-form-field>
-</form>
+
     <button mat-raised-button color="primary" (click)="submit()">Registrieren</button><br>
-    <p>Bereits einen Account bei Ticketero? Einfach hier anmelden</p>
-    <button mat-raised-button color="primary" [routerLink]="['/anmelden']">Anmelden</button>
+  </form>
+    <p class="abstand">Bereits einen Account bei Ticketero? Einfach hier anmelden</p>
+    <button class="abstand" mat-raised-button color="primary" [routerLink]="['/anmelden']">Anmelden</button>
+
   </div>
   <div class="teil3"> </div>
 </section>
