--- a/src/app/registrierungsmaske/registrierungsmaske.component.scss
+++ b/src/app/registrierungsmaske/registrierungsmaske.component.scss
@@ -62,4 +62,41 @@ input.example-right-align {
 }
 
 
+.example-container{
+  padding-bottom:150px;
+}
 
+@media(max-width:850px){
+  .teil2 h1{
+    font-size: 40px;
+    text-align: center;
+    margin-top: 30px;
+  }
+  .teil1,.teil3{
+    width: 0%;
+  }
+  .teil2, .teil4{
+      width: 100%;
+    }
+    .teil4{
+    padding-top: 30px;
+    }
+
+}
+@media (min-width:851px) and (max-width:1400px){
+  .teil1, .teil3{
+      width:15%;
+    }
+   .teil2, .teil4{
+      width:70%;}
+}
+@media(max-width:500px){
+  .example-container {
+    margin-left:5%;
+    margin-right:5%;
+  }
+  .abstand{
+    margin-left:5%;
+    margin-right:5%;
+  }
+}
