--- a/src/app/registrierungsmaske/registrierungsmaske.component.html
+++ b/src/app/registrierungsmaske/registrierungsmaske.component.html
@@ -29,6 +29,20 @@
     </button>
   </mat-form-field>
 
+  <mat-form-field color="primary" appearance="fill">
+    <mat-label>Geburtsdatum</mat-label>
+    <input matInput [matDatepicker]="picker2">
+    <mat-datepicker-toggle matSuffix [for]="picker2">
+    </mat-datepicker-toggle>
+    <mat-datepicker #picker2></mat-datepicker>
+  </mat-form-field>
+  <br>
+
+  <mat-form-field appearance="fill" id="runter">
+    <mat-label>Handynummer</mat-label>
+    <input matInput type="tel" name="Handynummer" placeholder="Handynummer">
+  </mat-form-field>
+
     <button mat-raised-button color="primary" (click)="submit()">Registrieren</button><br>
   </form>
     <p class="abstand">Bereits einen Account bei Ticketero? Einfach hier anmelden</p>
