cursor weg header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
   <nav class="navbar">
     <ul>
       <li><a [routerLink]="['/homepage']">Info</a></li>
-      <li><a href="#">Skigebiete</a>
+      <li><a href="#" class="ohne">Skigebiete</a>
         <ul class="dropdown">
           <li><a href="https://www.belalp.ch/poi-detail/belalp-bahnen-ag">Belalp Bahnen AG</a></li>
           <li><a href="https://www.rosswald-bahnen.ch/">Rosswald Bahnen AG</a></li>
@@ -17,7 +17,7 @@
           <li><a href="https://www.aletscharena.ch/aletsch-arena/orte/fiescheralp">Fiescheralp</a></li>
         </ul>
       </li>
-      <li><a>Sprache</a>
+      <li><a href="#" class="ohne">Sprache</a>
         <ul class="dropdown">
           <li><option value="de">Deutsch</option></li>
           <li><option value="en">Englisch</option></li>
