--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -18,7 +18,9 @@ header{
   justify-content: space-between;
   z-index: 1000;
 }
-
+.ohne{
+cursor:none;
+}
 header .logo{
   font-weight: bolder;
   font-size: 30px;
