--- a/src/app/registrierungsmaske/registrierungsmaske.component.html
+++ b/src/app/registrierungsmaske/registrierungsmaske.component.html
@@ -28,7 +28,6 @@
       <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
   </mat-form-field>
-
   <mat-form-field color="primary" appearance="fill">
     <mat-label>Geburtsdatum</mat-label>
     <input matInput [matDatepicker]="picker2">
@@ -37,11 +36,12 @@
     <mat-datepicker #picker2></mat-datepicker>
   </mat-form-field>
   <br>
-
   <mat-form-field appearance="fill" id="runter">
     <mat-label>Handynummer</mat-label>
     <input matInput type="tel" name="Handynummer" placeholder="Handynummer">
   </mat-form-field>
+  <mat-checkbox color="primary">Ich habe die AGB gelesen und akzeptiert</mat-checkbox>
+  <br><br>
 
     <button mat-raised-button color="primary" (click)="submit()">Registrieren</button><br>
   </form>
