routes angepasst (namen geändert!)

--- a/src/app/anmeldemaske/anmeldemaske.component.html
+++ b/src/app/anmeldemaske/anmeldemaske.component.html
@@ -23,7 +23,7 @@
       </mat-form-field>
         <button mat-raised-button color="primary"  (click)="submit()">Anmelden</button><br>
         <p>Noch keinen Account bei Ticketero? Einfach hier registrieren</p>
-        <button mat-raised-button color="primary" [routerLink]="['/registrierungsmaske']">Registrieren</button>
+        <button mat-raised-button color="primary" [routerLink]="['/registrieren']">Registrieren</button>
   </form>
   </div>
   <div class="teil3"> </div>
