--- a/src/app/registrierungsmaske/registrierungsmaske.component.html
+++ b/src/app/registrierungsmaske/registrierungsmaske.component.html
@@ -42,12 +42,10 @@
   </mat-form-field>
   <mat-checkbox color="primary">Ich habe die AGB gelesen und akzeptiert</mat-checkbox>
   <br><br>
-
     <button mat-raised-button color="primary" (click)="submit()">Registrieren</button><br>
   </form>
-    <p class="abstand">Bereits einen Account bei Ticketero? Einfach hier anmelden</p>
+    <span class="abstand">Bereits einen Account bei Ticketero? Einfach hier anmelden</span> <br>
     <button class="abstand" mat-raised-button color="primary" [routerLink]="['/anmelden']">Anmelden</button>
-
   </div>
   <div class="teil3"> </div>
 </section>
