--- a/src/app/anmeldemaske/anmeldemaske.component.html
+++ b/src/app/anmeldemaske/anmeldemaske.component.html
@@ -7,7 +7,7 @@
   <div class="teil1"> </div>
   <div class="teil2">
     <h1>Anmelden bei Ticketero</h1>
-    <h2>Hallo {{user.email}}</h2>
+    <h2>Hallo {{user.name}}</h2>
     <form class="example-container" (ngSubmit)="submitForm()" [formGroup]="form">
       <mat-form-field appearance="fill">
         <mat-label>E-Mail Adresse</mat-label>
