"Registrieren" Option hinzügefügt auf der Seite Accountverwaltung (wenn User nicht eingeloggt ist)

--- a/src/app/accountverwaltung/accountverwaltung.component.html
+++ b/src/app/accountverwaltung/accountverwaltung.component.html
@@ -22,6 +22,8 @@
       <button mat-raised-button color="primary"[routerLink]="['/kontaktformular']" > Verlust melden </button>
       <button mat-raised-button color="primary" [routerLink]="['/problemmelden']">Problem melden </button>
       <button mat-raised-button color="primary" [routerLink]="['/homepage']"> Abmelden </button>
+    <p>Noch keinen Account bei Ticketero? Einfach hier registrieren</p>
+    <button mat-raised-button color="primary" [routerLink]="['/registrierungsmaske']">Registrieren</button>
   </div>
 </section>
 
