--- a/src/app/registrierungsmaske/registrierungsmaske.component.html
+++ b/src/app/registrierungsmaske/registrierungsmaske.component.html
@@ -7,7 +7,7 @@
   <div class="teil1"> </div>
   <div class="teil2">
     <h1>Registrieren bei Ticketero</h1>
-<form class="example-container" [formGroup]="form">
+<form class="example-container" [formGroup]="form" (ngSubmit)="onSubmit()">
   <mat-form-field>
     <mat-label>Vorname</mat-label>
     <input matInput placeholder="Vorname" type="text" formControlName="firstName" required>
@@ -44,9 +44,9 @@
     <mat-label>Handynummer</mat-label>
     <input matInput type="tel" formControlName="phonenumber" placeholder="Handynummer">
   </mat-form-field>
-  <mat-checkbox color="primary">Ich habe die AGB gelesen und akzeptiert</mat-checkbox>
+  <mat-checkbox color="primary" formControlName="agb">Ich habe die AGB gelesen und akzeptiert</mat-checkbox>
   <br><br>
-    <button mat-raised-button color="primary" (click)="onSubmit()">Registrieren</button><br>
+    <button mat-raised-button color="primary">Registrieren</button><br>
   </form>
     <span class="abstand">Bereits einen Account bei Ticketero? Einfach hier anmelden</span> <br>
     <button class="abstand" mat-raised-button color="primary" [routerLink]="['/anmelden']">Anmelden</button>
