error interceptor gelöscht

--- a/src/app/accountverwaltung/accountverwaltung.component.html
+++ b/src/app/accountverwaltung/accountverwaltung.component.html
@@ -18,12 +18,12 @@
 
   <div class="liste_der_optionen">
     <button mat-raised-button color="primary" [routerLink]="['/kontaktdaten']" >Kontaktdaten bearbeiten</button>
-      <button mat-raised-button color="primary" [routerLink]="['/bevorstehendeEvents']">Mein Skipass</button>
+      <button mat-raised-button color="primary" [routerLink]="['/tickets']">Mein Skipass</button>
       <button mat-raised-button color="primary"[routerLink]="['/kontaktformular']" > Verlust melden </button>
       <button mat-raised-button color="primary" [routerLink]="['/problemmelden']">Problem melden </button>
       <button mat-raised-button color="primary" [routerLink]="['/homepage']"> Abmelden </button>
     <p>Noch keinen Account bei Ticketero? Einfach hier registrieren</p>
-    <button mat-raised-button color="primary" [routerLink]="['/registrierungsmaske']">Registrieren</button>
+    <button mat-raised-button color="primary" [routerLink]="['/registrieren']">Registrieren</button>
   </div>
 </section>
 
