e-mail fehlermeldung angepasst

--- a/src/app/accountverwaltung/accountverwaltung.component.html
+++ b/src/app/accountverwaltung/accountverwaltung.component.html
@@ -13,7 +13,8 @@
   </div>
 
   <div class="teil_2">
-    <h2>Willkomen zurück!</h2>
+    <!-- user.email muss zu user.firstname user.lastname später geändert werden -->
+    <h2>Willkomen zurück {{user.email}}!</h2>
   </div>
 
   <div class="liste_der_optionen">
