qr code abgeändert

--- a/src/app/check-ticket/check-ticket.component.html
+++ b/src/app/check-ticket/check-ticket.component.html
@@ -14,6 +14,7 @@
     </mat-form-field>
     <button mat-raised-button color="primary"  type="submit">Ticket suchen</button>
     </form>
+    <!--{{skipass.id}}-->
   </div>
   <div class="teil3"> </div>
 </section>
