Enpoint "Meine Skipässe"

--- a/src/app/bevorstehende-events/bevorstehende-events.component.html
+++ b/src/app/bevorstehende-events/bevorstehende-events.component.html
@@ -7,6 +7,7 @@
   <div class="teil1"> </div>
   <div class="teil2">
     <h1>Deine Skipässe</h1>
+    <h1>{{user.user_id}}</h1>
 
     <!--<h2>Skipass Liste</h2>
     <ul>
