--- a/src/app/check-ticket/check-ticket.component.html
+++ b/src/app/check-ticket/check-ticket.component.html
@@ -6,6 +6,7 @@
 <section class="registrieren">
   <div class="teil1"> </div>
   <div class="teil2">
+    <div class="parent">
     <h1>Ticket kontrollieren</h1>
     <form class="example-container" [formGroup]="form" (ngSubmit)="onSubmit()">
     <mat-form-field appearance="fill">
@@ -14,6 +15,7 @@
     </mat-form-field>
     <button mat-raised-button color="primary"  type="submit">Ticket suchen</button>
     </form>
+    </div>
   </div>
   <div class="teil3"> </div>
 </section>
