--- a/src/app/accountverwaltung/accountverwaltung.component.html
+++ b/src/app/accountverwaltung/accountverwaltung.component.html
@@ -22,9 +22,7 @@
       <button mat-raised-button color="primary" [routerLink]="['/tickets']">Mein Skipass</button>
       <button mat-raised-button color="primary"[routerLink]="['/kontaktformular']" > Verlust melden </button>
       <button mat-raised-button color="primary" [routerLink]="['/problemmelden']">Problem melden </button>
-      <button mat-raised-button color="primary" [routerLink]="['/homepage']"> Abmelden </button>
-    <p>Noch keinen Account bei Ticketero? Einfach hier registrieren</p>
-    <button mat-raised-button color="primary" [routerLink]="['/registrieren']">Registrieren</button>
+      <button mat-raised-button color="primary" (click)="logout()"> Abmelden </button>
   </div>
 </section>
 
