--- a/src/app/bevorstehende-events/bevorstehende-events.component.html
+++ b/src/app/bevorstehende-events/bevorstehende-events.component.html
@@ -19,9 +19,9 @@
       <mat-card class="skipass">
         <mat-card-header>
           <mat-card-title-group>
-            <mat-card-subtitle>{{skipass.datum}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{skipass.bestellnummer}}</mat-card-subtitle>
-            <mat-card-title>Skipass - {{skipass.vorname}} {{skipass.nachname}}</mat-card-title>
-            <mat-card-subtitle>{{skipass.skigebiet}} - {{skipass.tarif}}</mat-card-subtitle>
+            <mat-card-subtitle>{{skipass.valid_from}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{skipass.userid}}</mat-card-subtitle>
+            <mat-card-title>Skipass - {{skipass.firstname}} {{skipass.lastname}}</mat-card-title>
+            <mat-card-subtitle>Skigebiet - {{skipass.uses_left}}</mat-card-subtitle>
             <img mat-card-sm-image src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ff.hikr.org%2Ffiles%2F1698978.jpg&f=1&nofb=1&ipt=424ee23c95810b6ee9bf69a91664b55dedf2a2be0577c498f11d0d0a46d8f48f&ipo=images" >
           </mat-card-title-group>
         </mat-card-header>
