--- a/src/app/check-ticket/check-ticket.component.html
+++ b/src/app/check-ticket/check-ticket.component.html
@@ -10,9 +10,13 @@
     <h1>Ticket kontrollieren</h1>
     <form class="example-container" [formGroup]="form" (ngSubmit)="onSubmit()">
     <mat-form-field appearance="fill">
-      <mat-label>Ticketnummer eingeben</mat-label>
+      <mat-label>Seriennummer eingeben</mat-label>
       <input matInput formControlName="search">
     </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Ort eingeben</mat-label>
+        <input matInput formControlName="place">
+      </mat-form-field>
     <button mat-raised-button color="primary"  type="submit">Ticket suchen</button>
     </form>
     </div>
